[package]
name = "rust-crypto-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4"
actix-session = "0.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.8.0"

